[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/font_60.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/Trike_info_panel.gd" type="Script" id=2]
[ext_resource path="res://assets/font_30.tres" type="DynamicFont" id=3]

[sub_resource type="Theme" id=3]
default_font = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 1 )

[node name="Trike_info_panel" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back_button" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -143.0
margin_top = -77.0
custom_fonts/font = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Update_button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -133.5
margin_top = -223.0
margin_right = 133.5
custom_fonts/font = ExtResource( 3 )
text = "Update Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info_box" type="VBoxContainer" parent="Control"]
margin_left = 22.6106
margin_top = 321.885
margin_right = 161.611
margin_bottom = 860.885
theme = SubResource( 3 )
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit_box" type="VBoxContainer" parent="Control"]
margin_left = 235.0
margin_top = 296.48
margin_right = 680.0
margin_bottom = 877.48
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_right = 59.0
margin_bottom = 71.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 1 )
text = "Title"

[connection signal="visibility_changed" from="." to="." method="_on_Trike_info_panel_visibility_changed"]
[connection signal="pressed" from="Control/Back_button" to="." method="_on_Back_button_pressed"]
[connection signal="pressed" from="Control/Update_button" to="." method="_on_Update_button_pressed"]
